--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 android {
     compileSdkVersion 33
 
+    viewBinding {
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.androiddevs.mvvmnewsapp"
         minSdkVersion 21
@@ -34,6 +38,8 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.5.3"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -67,9 +73,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
 
-    // Navigation Components
-    implementation "androidx.navigation:navigation-fragment-ktx:2.2.1"
-    implementation "androidx.navigation:navigation-ui-ktx:2.2.1"
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
